--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -28,14 +28,14 @@
     "service_it_services_title": "Zoho Software",
     "service_it_services_description": "Umfassende IT-Unterstützung und Management für reibungslose Abläufe.",
     "projects_title": "Unsere Projekte",
-    "project_one_title": "Projekt Eins",
+    "project_one_title": "Quiz App",
     "project_one_description": "Eine kurze Beschreibung von Projekt Eins.",
-    "project_1_title": "Projekt Eins",
-    "project_1_description": "Beschreibung für Projekt Eins.",
+    "project_1_title": "Responsive Job-Liste",
+    "project_1_description": "Eine responsive Job-Listing-Seite, erstellt mit HTML, CSS und JavaScript, mit effizienten, fähigkeitsbasierten Filtern.",
     "project_2_title": "Projekt Zwei",
     "project_2_description": "Beschreibung für Projekt Zwei.",
-    "project_3_title": "Projekt Drei",
-    "project_3_description": "Beschreibung für Projekt Drei.",
+    "project_3_title": "Neonröhren-Uhr Projekt",
+    "project_3_description": "Eine elegante Neonröhren-Uhr, die Echtzeit anzeigt, mit dynamischer Beleuchtung und interaktivem Umschalter.",
     "project_view_more": "Mehr Erfahren",
     "contact_title": "Kontaktieren Sie uns",
     "contact_name_placeholder": "Ihr Name",
