--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -44,12 +44,12 @@
     "projects_title": "Our Projects",
     "project_one_title": "Project One",
     "project_one_description": "A brief description of Project One.",
-    "project_1_title": "Project One",
-    "project_1_description": "Description for Project One.",
+    "project_1_title": "Responsive Job Listing",
+    "project_1_description": "A responsive job listing page built with HTML, CSS, and JavaScript, featuring efficient skill-based filtering.",
     "project_2_title": "Project Two",
     "project_2_description": "Description for Project Two.",
-    "project_3_title": "Project Three",
-    "project_3_description": "Description for Project Three.",
+    "project_3_title":  "Neon Tube Clock Project",
+    "project_3_description": "A stylish neon tube clock showing real time with dynamic lighting and toggle.",
     "project_view_more": "Learn More",
     "contact_title": "Contact Us",
     "contact_name_placeholder": "Your Name",
