project section responsive

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -30,8 +30,8 @@
     "projects_title": "Unsere Projekte",
     "project_one_title": "Quiz App",
     "project_one_description": "Eine kurze Beschreibung von Projekt Eins.",
-    "project_1_title": "Responsive Job-Liste",
-    "project_1_description": "Eine responsive Job-Listing-Seite, erstellt mit HTML, CSS und JavaScript, mit effizienten, fähigkeitsbasierten Filtern.",
+    "project_1_title": "Responsiver Animierter Shop-Karte",
+    "project_1_description": "Entwickelt und umgesetzt eine interaktive, vollständig responsive Shop-Karte mit flüssigen Animationen, die eine optimale Darstellung auf allen Geräten gewährleistet.",
     "project_2_title": "Projekt Zwei",
     "project_2_description": "Beschreibung für Projekt Zwei.",
     "project_3_title": "Neonröhren-Uhr Projekt",
