--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -44,8 +44,8 @@
     "projects_title": "Our Projects",
     "project_one_title": "Project One",
     "project_one_description": "A brief description of Project One.",
-    "project_1_title": "Responsive Job Listing",
-    "project_1_description": "A responsive job listing page built with HTML, CSS, and JavaScript, featuring efficient skill-based filtering.",
+    "project_1_title": "Responsive Animated Shop Card",
+    "project_1_description": "Designed and developed an interactive, fully responsive shop card with smooth animations, ensuring optimal presentation across all devices.",
     "project_2_title": "Project Two",
     "project_2_description": "Description for Project Two.",
     "project_3_title":  "Neon Tube Clock Project",
