--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -293,5 +293,14 @@
     "contact_us_content": "If you have any questions or comments regarding these Terms of Use, please contact us at info@cyborg.com.\n\nWe may update the Terms occasionally, with changes taking effect immediately upon posting unless stated otherwise. We recommend reviewing the Terms periodically for any updates. If you do not agree with the Terms, please stop using the website immediately.\n\nThank you for your attention and for using our website!",
     
     "updated_date": "Last updated: November 11, 2024"
+  },
+  "contact": {
+    "name_placeholder": "Your Name",
+    "email_placeholder": "Your Email",
+    "message_placeholder": "Your Message",
+    "send_button": "Send",
+    "sending": "Sending...",
+    "success_message": "Thank you for your message. We will get back to you shortly.",
+    "error_message": "Failed to send message. Please try again later."
   }
 }
